<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/activityBackground"
    tools:context=".authentication.SignUp">

    <EditText
        android:id="@+id/input_username"
        android:tag="input_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?attr/editTextRounded"
        android:textColorHint="?attr/editTextColor"
        android:textColor="?attr/editTextColor"
        android:ems="10"
        android:hint="@string/editText_user_name"
        android:inputType="textPersonName"
        android:minWidth="300dp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="@+id/input_lastName"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="@+id/input_lastName"
        app:layout_constraintTop_toBottomOf="@+id/input_lastName" />

    <EditText
        android:id="@+id/input_email"
        android:tag="input_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/editTextRounded"
        android:textColorHint="?attr/editTextColor"
        android:textColor="?attr/editTextColor"
        android:ems="10"
        android:hint="@string/editText_email"
        android:inputType="textEmailAddress"
        android:minWidth="300dp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="@+id/input_username"
        app:layout_constraintStart_toStartOf="@+id/input_username"
        app:layout_constraintTop_toBottomOf="@+id/input_username" />

    <EditText
        android:id="@+id/input_password"
        android:tag="input_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/editTextRounded"
        android:textColorHint="?attr/editTextColor"
        android:textColor="?attr/editTextColor"
        android:ems="10"
        android:hint="@string/editText_password"
        android:inputType="textPassword"
        android:minWidth="300dp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="@+id/input_email"
        app:layout_constraintStart_toStartOf="@+id/input_email"
        app:layout_constraintTop_toBottomOf="@+id/input_email" />

    <Button
        android:id="@+id/button_sign_up"
        android:tag="button_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_button"
        android:minWidth="300dp"
        android:text="@string/button_sign_up"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/input_password"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/input_password"
        app:layout_constraintTop_toBottomOf="@+id/input_password" />

    <Button
        android:id="@+id/button_profile_img"
        android:tag="button_profile_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:width="150dp"
        android:height="150dp"
        android:background="@drawable/circle"
        android:text="@string/button_add_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_already_have_an_account"
        android:tag="button_already_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button_secondary"
        android:minWidth="300dp"
        android:shadowColor="#00FFFFFF"
        android:text="@string/button_already_have_account"
        android:textColor="#08c"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/button_sign_up"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/button_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_up" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/view_profile_image"
        android:tag="view_profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="@+id/button_profile_img"
        app:layout_constraintEnd_toEndOf="@+id/button_profile_img"
        app:layout_constraintStart_toStartOf="@+id/button_profile_img"
        app:civ_border_width="1px"
        app:civ_border_color="#eee"
        app:layout_constraintTop_toTopOf="@+id/button_profile_img"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/imageButton_content_description"/>

    <EditText
        android:id="@+id/input_lastName"
        android:tag="input_lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?attr/editTextRounded"
        android:textColorHint="?attr/editTextColor"
        android:textColor="?attr/editTextColor"
        android:ems="10"
        android:hint="@string/editText_last_name"
        android:inputType="textPersonName"
        android:minWidth="300dp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="@+id/input_firstName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/input_firstName"
        app:layout_constraintTop_toBottomOf="@+id/input_firstName" />

    <EditText
        android:id="@+id/input_firstName"
        android:tag="input_firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?attr/editTextRounded"
        android:textColorHint="?attr/editTextColor"
        android:textColor="?attr/editTextColor"
        android:ems="10"
        android:hint="@string/editText_first_name"
        android:inputType="textPersonName"
        android:minWidth="300dp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="@+id/view_profile_image"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/view_profile_image"
        app:layout_constraintTop_toBottomOf="@+id/view_profile_image" />

</androidx.constraintlayout.widget.ConstraintLayout>